oko_attached: fix horizontal scroll issue

--- a/embed/oko_attached/src/components/modal/modal.module.scss
+++ b/embed/oko_attached/src/components/modal/modal.module.scss
@@ -14,6 +14,9 @@
 }
 
 .floatingWrapper {
+  width: 100%;
+  max-width: 440px;
+
   &:focus-visible {
     outline: none;
   }
