--- a/embed/oko_attached/src/components/modal_variants/common/make_signature/make_signature_modal.module.scss
+++ b/embed/oko_attached/src/components/modal_variants/common/make_signature/make_signature_modal.module.scss
@@ -5,8 +5,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  width: 400px;
-  margin: 20px;
+  width: 100%;
+  max-width: 440px;
+  padding: 20px;
 
   gap: 20px;
 
