--- a/embed/oko_attached/src/components/modal_variants/error/error_modal.module.scss
+++ b/embed/oko_attached/src/components/modal_variants/error/error_modal.module.scss
@@ -4,8 +4,9 @@
 .container {
   display: flex;
   flex-direction: column;
-  width: 400px;
-  margin: 20px;
+  width: 100%;
+  max-width: 440px;
+  padding: 20px;
 }
 
 .modal {
